--- a/src/main/webapp/Views/Secured/Reports/ReportTransaction.xhtml
+++ b/src/main/webapp/Views/Secured/Reports/ReportTransaction.xhtml
@@ -24,12 +24,11 @@
 						<p:selectCheckboxMenu id="idPayers" value="#{reportsController.selectedPayerIdList}" label="Select Payers"
 				            filter="true" filterMatchMode="startsWith" style="width:177px"  var="t"
 				            converter="javax.faces.Integer" panelStyle="width:250px"
-				            onHide="PF('transactionsTable').filter()"
 				            >
 				            
-				             <f:ajax event="change" />
+				             <!-- <f:ajax event="change" /> -->
 				            <f:selectItems value="#{reportsController.payerList}" var="payer"
-								itemLabel="#{payer.name} #{payer.planName}" itemValue="#{payer.id}"  />
+								itemLabel="#{payer.name}" itemValue="#{payer.id}"  />
 
 							<p:column>
 								<h:outputText value="#{t.name}" />
@@ -37,8 +36,9 @@
 				            
 				        </p:selectCheckboxMenu>
 					
-						<p:commandButton value="Search" update=":frmMain"
-							action="#{reportsController.filterReport()}" />
+						<p:commandButton value="Search" actionListener="#{reportsController.searchButtonPressed()}"
+						update="@parent:@parent:@parent:frmMain"
+						 />
 						<br />
 						
 					</h:panelGrid>
@@ -59,18 +59,7 @@
 						<p:column headerText="Payer Name">
 						 <!-- <p:column headerText="Payer Name" filterMatchMode="contains" filterBy="#{transaction.payer.name}"> -->
 							<!-- #{transaction.payer.name} #{transaction.payer.planName} -->
-							
-							<table>
-								<ui:repeat value="#{transaction.payerList.toArray()}" var="t">
-
-									<tr>
-										<td style="border: 0px;"><h:outputText value="#{t.name} #{t.planName}" />
-										</td>
-
-									</tr>
-								</ui:repeat>
-							</table>
-							
+							#{transaction.payer.name} #{transaction.plan.name}			
 						</p:column> 
 						
 						<p:column headerText="Practice Name" filterMatchMode="contains" filterBy="#{transaction.practice.name}">
@@ -86,7 +75,7 @@
 						</p:column>
 						
 						<p:column headerText="Type">
-							#{transaction.transactionType}
+							#{transaction.transactionState}
 						</p:column>
 						
 						<p:column headerText="Status">
