--- a/src/main/webapp/Views/Secured/Reports/ReportPractice.xhtml
+++ b/src/main/webapp/Views/Secured/Reports/ReportPractice.xhtml
@@ -16,7 +16,7 @@
 				<h2>Practice Report</h2>
 
 				<h:form>
-					
+					<p:outputLabel value="#{reportsController.titleFunc()}" />
 					<h:panelGrid columns="9" cellpadding="0">  
 					
 					
