--- a/src/main/webapp/Views/Secured/Reports/ReportTransaction.xhtml
+++ b/src/main/webapp/Views/Secured/Reports/ReportTransaction.xhtml
@@ -18,7 +18,7 @@
 				<h2>Payer Transaction Report</h2>
 
 				<h:form>
-					
+					<p:outputLabel value="#{reportsController.dummyString}" />
 					<h:panelGrid columns="3" cellpadding="0">  
 						
 						<p:selectCheckboxMenu id="idPayers" value="#{reportsController.selectedPayerIdList}" label="Select Payers"
