--- a/src/main/webapp/Views/Template/top.xhtml
+++ b/src/main/webapp/Views/Template/top.xhtml
@@ -98,7 +98,8 @@ $( document ).ready(function(){
 					<p:menuitem value="Transaction Report"
 						action="#{reportsController.viewRepTransac()}" />
 					<p:menuitem value="Provider Report"
-						action="#{reportsController.viewRepProvider()}" />
+						action="ReportProvider" />
+						<!-- #{reportsController.viewRepProvider()} -->
 					<p:menuitem value="Practice Report"
 						action="#{reportsController.viewRepPractice()}" />
 				</p:submenu>
