--- a/src/main/webapp/Views/Secured/Transaction/ViewTransaction.xhtml
+++ b/src/main/webapp/Views/Secured/Transaction/ViewTransaction.xhtml
@@ -6,7 +6,7 @@
 <h:head>
 
 <f:metadata>
-		<f:viewAction actionListener="#{transactionController.onLoad()}" />
+		<f:viewAction actionListener="#{reportsController.onLoad()}" />
 	</f:metadata>
 
 </h:head>
