--- a/src/main/webapp/Views/Secured/Reports/ReportPractice.xhtml
+++ b/src/main/webapp/Views/Secured/Reports/ReportPractice.xhtml
@@ -4,6 +4,9 @@
 	xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://java.sun.com/jsf/core">
 <h:head>
+<f:metadata>
+		<f:viewAction actionListener="#{reportsController.onLoad()}" />
+	</f:metadata>
 </h:head>
 
 	<h:body>
@@ -16,7 +19,6 @@
 				<h2>Practice Report</h2>
 
 				<h:form>
-					<p:outputLabel value="#{reportsController.titleFunc()}" />
 					<h:panelGrid columns="9" cellpadding="0">  
 					
 					
