--- a/src/main/webapp/Views/Secured/Reports/ReportProvider.xhtml
+++ b/src/main/webapp/Views/Secured/Reports/ReportProvider.xhtml
@@ -2,13 +2,14 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:p="http://primefaces.org/ui"
-      xmlns:f="http://java.sun.com/jsf/core">
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:b="http://bootsfaces.net/ui">
       
 <h:head>
-<f:metadata>
+<!-- <f:metadata>
 		<f:viewAction actionListener="#{reportsController.onLoad()}" />
 	</f:metadata>
-
+ -->
 </h:head>
 
 	<h:body>
@@ -95,11 +96,19 @@
 							#{transaction.provider.firstName} #{transaction.provider.lastName}
 						</p:column>
 
-						<p:column headerText="Payer Name" filterBy="#{transaction.payer.name}" filterFunction="#{transaction.filterByPayer}">
-							<!-- #{transaction.payer.name} #{transaction.payer.planName} -->
-							#{transaction.payer.name} #{transaction.plan.name}
-							
-						</p:column>
+						<p:column headerText="Payer Plan Name" filterBy="#{transaction.payer.name}" filterFunction="#{transaction.filterByPayer}">
+						 
+						 <ui:repeat var="plan" value="#{transaction.plans.toArray()}">
+						 <b:row>
+						 <b:column span="6">
+						 #{transaction.payer.name}
+						 </b:column>
+						 <b:column span="6">
+						 #{plan.name}
+						 </b:column>
+						 </b:row>
+						 </ui:repeat>							
+						</p:column> 
 						
 						<!-- <p:column headerText="Practice Name">
 							#{transaction.practice.name}
