--- a/src/main/webapp/Views/Secured/Transaction/ViewTransaction.xhtml
+++ b/src/main/webapp/Views/Secured/Transaction/ViewTransaction.xhtml
@@ -2,12 +2,13 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:p="http://primefaces.org/ui">
+	xmlns:p="http://primefaces.org/ui"
+      xmlns:b="http://bootsfaces.net/ui">
 <h:head>
 
-<f:metadata>
-		<f:viewAction actionListener="#{reportsController.onLoad()}" />
-	</f:metadata>
+<!-- <f:metadata>
+		<f:viewAction actionListener="#{transactionController.onLoad()}" />
+	</f:metadata> -->
 
 </h:head>
 
@@ -71,9 +72,20 @@
 							#{transaction.payer.name}
 						</p:column>
 						
-						<p:column headerText="Plan">
-							#{transaction.plan.name}
-						</p:column>
+						 <p:column headerText="Plan">
+						 <table>
+						 <ui:repeat var="plan" value="#{transaction.plans.toArray()}">
+						 
+						 <tr>
+						 <td>
+						 #{plan.name}
+						 </td>
+						 </tr>
+						 
+						 </ui:repeat>
+						 </table>
+							
+						</p:column> 
 						
 						<p:column headerText="Practice Name" filterMatchMode="contains" filterBy="#{transaction.practice.name}">
 							#{transaction.practice.name}
