--- a/src/main/webapp/Views/Template/MainTemplate.xhtml
+++ b/src/main/webapp/Views/Template/MainTemplate.xhtml
@@ -1,7 +1,11 @@
+<?xml version='1.0' encoding='UTF-8' ?>
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
  xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
-	xmlns:p="http://primefaces.org/ui">
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:p="http://primefaces.org/ui"
+	xmlns:b="http://bootsfaces.net/ui">
 <h:head>
 
 <!-- <meta http-equiv="refresh" content="${pageContext.session.maxInactiveInterval};url=index.jsf"> </meta> -->
@@ -18,8 +22,7 @@
 </h:head>
 
 <h:body>
-
-<h:body>
+<b:container id="rootContainer">
     <div id="divTop">
         <ui:insert name="top">
             <ui:include src="/Views/Template/top.xhtml"/>
@@ -37,12 +40,6 @@
         </ui:insert>
     </div>
  
-    
+    </b:container>
 </h:body>
-
-
-</h:body>
-
-
-
 </html>
